<resources>
    <string name="app_name">StudyTest2</string>
    <string name="title_activity_Main">MainActivity</string>
    <string name="title_ToDO">ToDoリスト</string>
    <string name="title_diary">日記</string>
    <string name="title_graph">グラフ</string>
    <string name="title_target">目標</string>
    <string name="title_trivia">豆知識</string>
    <string name="title_time">タイマー</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_study_test2">MainActivity</string>
    <string name="title_activity_time">timeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--タイマー画面-->
    <string name="startButton">スタート</string>
    <string name="stopButton">ストップ</string>
    <string name="subjectButton">科目選択</string>

    <!--科目選択画面-->
    <string name="subject1">国語</string>
    <string name="subject2">数学</string>
    <string name="subject3">英語</string>
    <string name="subject4">＋</string>
    <string name="subject_text">科目設定をしてください。</string>
    <!--勉強豆知識画面-->
    <string name="title_tirivia">勉強の豆知識紹介！！！</string>
    <string name="rest_1">正しい休憩の取り方３選</string>
    <string name="rest_2">勉強終わってただしく休憩取れているでしょうか？\n
    正しく休憩を取ることで次の作業や勉強に集中しやすくなります。\n
    今回は正しい休憩の取り方を３つご紹介致します。\n</string>
    <string name="rest_3">・軽い運動\n</string>
    <string name="rest_4">勉強している間、ずっと座っていると血流は悪くなり頭の回転が悪くなってしまいます！\n
    それを解決してくれるのが「軽い運動」です。ウォーキングやジョギング、ストレッチをやることで血流がよくなり頭の回転が良くなります\n
    また、軽い運動をして休憩を取ると活力が高くなり、認知機能も高まることもわかっています。さらに疲労感も軽減するみたいです。
    休憩時には皆さん軽い運動から取り入れてみてはいかがでしょうか！\n</string>
    <string name="rest_5">・仮眠を取る\n</string>
    <string name="rest_6">ついつい休憩のときにスマホなど触ってはないでしょうか？\n休憩時にスマホを触ってしまうとさらに脳を疲れさせているだけです。\n
    脳をしっかり休ませるには仮眠が一番良いでしょう。15分の仮眠を取るだけで、疲労回復効果や認知能力も上がります。
    \nまた、だらだら長い時間勉強するより、仮眠をとった休憩をとることで集中して勉強がで出来ると思います。
    \nぜひ、取り入れてみてください。\n</string>
    <string name="rest_7">・テンポの早い音楽を聴く\n</string>
    <string name="rest_8">勉強中に音楽を聴いて勉強している人は多いのではないかと思います。\nしかし、それは勉強の妨げになっています。音楽を聴くタイミングは勉強前と休憩時です。\n
    勉強をやりはじめる前にテンポの早い音楽を聴くことで快楽物質の「ドーパミン」が分泌され気分が上がり、勉強が始めやすくなります。\n
    また、テンポの速い音楽を聞くことで短期記憶などに使われる部位が活性化させ、短期記憶が向上したという結果が出ております\n
    上手く音楽を使うことで勉強の効率化も計ることができるので、ぜひやってみてください！\n</string>
    <string name="rest_9">・まとめ\n</string>
    <string name="rest_10">今回は正しい休憩の取り方３選を紹介しました。\n
    どれも取り入れやすい物を紹介してきました。正しく休憩をとり、目標に向かって頑張って勉強に取り組んでみてください！</string>

    <string name="con_text1">集中力を高める方法３選</string>
    <string name="con_text2">長い時間勉強や作業を行っていくと少しずつ集中量が落ちていきます。
    今回はその集中力をできるだけ長く保つ方法を紹介していきます！</string>
    <string name="con_text3">・作業台に観葉植物を置く</string>
    <string name="con_text4">勉強机や作業台の上に観葉植物を置くだけで集中力が上がるって知っていましたか？\n
    観葉植物が視野に入るグループと入らないグループに分けて、勉強の集中やストレス数値を比べる実験があり、結論的にいうと
    視野に観葉植物が入れないグループに比べて視野に観葉植物が入るグループの方がストレスの数値があまり上昇せず、勉強に集中できたという
    結果になったそうです。また、観葉植物にはリラックス効果や空気を綺麗にする浄化効果があるので、1つ勉強机や作業台においてみてはどうでしょうか！！</string>
    <string name="con_text5">・空気の入れ替えをする。</string>
    <string name="con_text6">長時間部屋で勉強してる方は定期的に空気の入れ替えをしているでしょうか？？\n
    室内の二酸化炭素濃度が上がると、勉強や作業の効率が下がることがわかっています。勉強に集中出来なくなり、体がだるくなったり、
    頭が重くなったりとしたら、室内の喚起をしてみてはどうですか？空気を入れ替えるだけで空気も綺麗になり、体調も良くなり、勉強に集中出来る
    ようになります。ぜひ。定期に空気の入れ替えしてみてはどうでしょうか！！</string>
    <string name="con_text7">・ブドウ糖を取る</string>
    <string name="con_text8">皆さんは勉強合間にしっかりブドウ糖を取っているでしょうか？なぜブドウ糖が必要かといいますと、
    脳を動かすときブドウ糖をエネルギー減として働いているからです。また。ブドウ糖が不足すると血糖値がさがり、交換神経系のホルモンであるアドレナリン
    が分泌されることにより、興奮状態となり勉強の集中力が切れてしまいます。なんで、勉強の休憩や勉強の合間にブドウ糖を取ることを推奨します。
    またどのようにブドウ糖をとればいいかと言いますと、コンビニにも売っている「ラムネ」を食べましょう。ラムネはほぼブドウ糖で出来ており、効率良くブドウ糖を摂取出来ると思います。
    ぜひ、ブドウ糖をとり勉強に集中しましょう！！</string>
    <string name="con_text9">・まとめ</string>
    <string name="con_text10">今回は勉強に集中力を高め方３選を紹介しました。他にも集中の高め方がありますが１番いいのはどれが自分にあっているのか
    沢山試して、自分に合ったものをやっていきましょう！！
    また、人の集中力は生まれつき短い物なので、長時間勉したら長時間の休憩を取りましょう！休憩取ることによって次の勉強に集中できるようになります！
    ぜひやってみてください。</string>
    <string name="eff_text1">勉強効率を上げる方法３選</string>
    <string name="eff_text2"></string>
    <string name="eff_text3">・シングルタスク</string>
    <string name="eff_text4"></string>
    <string name="eff_text5">・要点をまとめる</string>
    <string name="eff_text6"></string>
    <string name="eff_text7">・アウトプットとインプットの比率を考えよう</string>
    <string name="eff_text8"></string>
    <string name="eff_text9">・まとめ</string>
    <string name="eff_text10"></string>

    <string name="mokuhyou">今月の目標を設定する</string>
    <string name="text50">今月の目標</string>
    <string name="Edittext50" />
    <string name="button50">決定</string>
    <string name="target">今月の目標を入力する</string>
    <string name="button70">書き直す</string>
    <string name="button71">確定</string>
    <string name="text70">今月の目標</string>
    <string name="text71" />
    <string name="text72">でよろしいですか？</string>
    <string name="text73">※確定してしまうと期限が過ぎるまで目標を変更することができません。</string>
</resources>