<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/todolist"
        android:title="@string/title_ToDO" />
    <item
        android:id="@+id/navigation_dairy"
        android:icon="@drawable/driary"
        android:title="@string/title_diary" />
    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/graph"
        android:title="@string/title_graph" />
    <item
        android:id="@+id/navigation_target"
        android:icon="@drawable/target"
        android:title="@string/title_target" />
    <item
        android:id="@+id/navigation_trivia"
        android:icon="@drawable/trivia"
        android:title="@string/title_trivia" />
</menu>